--- a/html/style.css
+++ b/html/style.css
@@ -7004,15 +7004,15 @@ body:not(.device-touch) .button.button-full strong {
 /* Buttons - Colors
 -----------------------------------------------------------------*/
 
-.button-red { background-color: #C02942; }
+.button-red { background-color: #e5384f; }
 .button-3d.button-red:hover,
 .button-reveal.button-red:hover,
 .button-border.button-red:hover,
-.button-border.button-red.button-fill:before { background-color: #C02942 !important; }
+.button-border.button-red.button-fill:before { background-color: #e5384f !important; }
 
 .button-border.button-red {
-	color: #C02942;
-	border-color: #C02942;
+	color: #e5384f;
+	border-color: #e5384f;
 }
 
 .button-teal { background-color: #53777A; }
